--- a/develop/.env
+++ b/develop/.env
@@ -1,4 +1,4 @@
 DB_NAME=employee_db
 DB_USER=postgres
 DB_PASSWORD='N#mXJA6Z'
-# read in the connection.ts file
+# this is read in the connection.ts file
